Valida el usuario.Si existe en la BD , y si los campos estan o no vacios. Cuando el usuario es valido muestra un jdialog segun el perfil que tiene asignado perfil : 	1--> Administrador 	2--> Estrategico 	3-->Tactico un jDialog para cada perfil *clase java para reportes pendiente de modificar...

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SIG-RHU-SW.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.postgresql-9.4-1201.jdbc4.jar=..\\..\\postgresql-9.4-1201.jdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${libs.Jasperreports.classpath}
+    ${libs.Jasperreports.classpath}:\
+    ${file.reference.postgresql-9.4-1201.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.sherwinca.rhu.formularios.principal
+main.class=com.sherwinca.rhu.formularios.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
