--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/SIG-RHU-SW.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.3.3.jar=..\\jcalendar-1.3.3.jar
 file.reference.postgresql-9.4-1201.jdbc4.jar=..\\..\\postgresql-9.4-1201.jdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.Jasperreports.classpath}:\
-    ${file.reference.postgresql-9.4-1201.jdbc4.jar}
+    ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
