--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SIG-RHU-SW
+application.vendor=Desarrollo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,16 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SIG-RHU-SW.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=..\\jcalendar-1.3.3.jar
-file.reference.postgresql-9.4-1201.jdbc4.jar=..\\..\\postgresql-9.4-1201.jdbc4.jar
+file.reference.postgresql-9.4-1201.jdbc4.jar-1=..\\postgresql-9.4-1201.jdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${libs.Jasperreports.classpath}:\
-    ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.postgresql-9.4-1201.jdbc4.jar-1}:\
+    ${libs.JasperReports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
